examples/error/function_error_2.c
extern "MyMinicLib/Funzione" Funzione();

main(){
	
	Funzione();
}